[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "nfsclient"
version = "0.0.1"
requires-python = ">=3.8"
authors = [
    {name = "Jayson Fong", email = "jayson.fong@gatech.edu"},
    {name = "Cooper Yang", email = "cm_yang@yeah.net"},
]
dependencies = [
    "xdrlib3; python_full_version >= '3.13.0'",
]
description = "NFSv3 Client"
readme = "README.md"
license = { text = "MIT" }
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/Jayson-Fong/python-nfsclient"
Issues = "https://github.com/Jayson-Fong/python-nfsclient/issues"
